# OpenGL

komgraf/: Cargo.toml
komgraf/src/: main.rs
triangle/: Cargo.toml
triangle/src/: main.rs  shader.wgsl
